--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ input[type=text]:read-only, input[type=text]:read-only:focus {
     backdrop-filter: blur(24px);
     width: 100vw;
     height: 100vh;
-    padding: 8rem;
+    padding: 8rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,7 +34,8 @@ input[type=text]:read-only, input[type=text]:read-only:focus {
 .wins-modal.show {
     opacity: 1;
 }
-.wins-modal #wins-chart {
+.wins-modal #chart {
+    margin: auto;
     max-width: 900px;
-    max-height: 400px;
+    height: 400px;
 }
